crates/solidity/testing/snapshots/bindings_output/user_types/in_library/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or CloseBrace or ConstructorKeyword or EnumKeyword or EventKeyword or FallbackKeyword or FixedKeyword or FunctionKeyword or Identifier or IntKeyword or MappingKeyword or ModifierKeyword or ReceiveKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword or UsingKeyword.
    ╭─[input.sol:8:5]
    │
  8 │ ╭─▶     type LibType is int32;
    ┆ ┆   
 12 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     function test() public returns (int32) {
   │              ──┬─  
   │                ╰─── def: 2
 3 │         return MyLib.LibType.unwrap(MyLib.create());
   │                ──┬── ───┬─── ───┬── ──┬── ───┬──  
   │                  ╰──────────────────────────────── ref: 3
   │                         │       │     │      │    
   │                         ╰───────────────────────── unresolved
   │                                 │     │      │    
   │                                 ╰───────────────── unresolved
   │                                       │      │    
   │                                       ╰─────────── ref: 3
   │                                              │    
   │                                              ╰──── unresolved
   │ 
 7 │ library MyLib {
   │         ──┬──  
   │           ╰──── def: 3
───╯
